--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <h2>Jamela Jehad</h2>
             <h3 >Frontend Developer</h3>
             <div class="buttons">
-                <a href="#" class="btn contact">Contact Info</a>
+                <a href="#contact" class="btn contact">Contact Me</a>
             </div>
             <div class="social-icons">
                 <a href=" https://github.com/jamelaajehad" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yourusername" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/yourusername" class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/yourusername" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100007105997774 " class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/Jamelajehadd" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             
             </div>
@@ -95,7 +95,7 @@
             <div class="skill">
                 <i class=" fas fa-check-circle"></i>
                 <div>
-                    <span>Firebase</span>
+                    <span>Bootstrap</span>
                     <span class="level">Intermediate</span>
                 </div>
           </div>
