--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
             <div class="social-icons">
                 <a href=" https://github.com/jamelaajehad" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/yourusername" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+
                 <a href="https://www.facebook.com/profile.php?id=100007105997774 " class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/Jamelajehadd" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+                
             </div>
             
             </div>
@@ -96,7 +96,7 @@
                 <i class=" fas fa-check-circle"></i>
                 <div>
                     <span>Bootstrap</span>
-                    <span class="level">Intermediate</span>
+                    <span class="level">Basic</span>
                 </div>
           </div>
        </div>
@@ -124,8 +124,8 @@
             <div class="project-card">
                 <img src="images/clock.jpg" alt="Project 3">
                 <div class="project-info">
-                    <h3>Digital Clock</h3>
-                    <a href=" https://github.com/jamelaajehad/Digital-Clock" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+                    <h3>SocialNest</h3>
+                    <a href=" https://github.com/jamelaajehad/SocialNest-App" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
                 </div>
             </div>
         </div>
@@ -157,9 +157,9 @@
             </nav>
             <div class="social-icons">
                 <a href="https://github.com/jamelaajehad" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/yourusername" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/yourusername" class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/yourusername" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/" class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
